# location-match-tests

./: CLAUDE.md  README.md  SETUP_LINUX_GPU.md  cluster_images.py  diagnose_matches.py  kornia_pipeline.py  lightglue_pipeline_cuda.py  main.py  match_features_cpu.py  pyproject.toml  requirements_cuda.txt  run_cuda_pipeline.sh  run_full_pipeline.py  simple_scene_matching.py
explorations/01/: .gitignore  BEFORE_AFTER.md  BUG_FIX_REPORT.md  CAMERA_ANIMATION_REPORT.md  CAMERA_ANIMATION_SUMMARY.md  CAMERA_INTEGRATION.md  DATA_FLOW.md  FIX_SUMMARY.md  FRONTEND.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  NPZ_PARSER_IMPLEMENTATION_REPORT.md  NPZ_PARSER_QUICK_REFERENCE.md  NPZ_PARSER_README.md  QUICKSTART.md  QUICK_START.md  README.md  TEST_CAMERA_ANIMATION.md  TEST_RESULTS.md  TEST_SUITE_README.md  VGGT_CLIENT_README.md  VGGT_TESTING_SUMMARY.md  VGGT_TEST_REPORT.md  VIEWER3D_FILES.txt  VIEWER_IMPLEMENTATION.md  WORKFLOW_DIAGRAM.md  build-frontend.sh  build-viewer.sh  diagnose-vggt-api.ts  package.json  test-complete-workflow.ts  test-fetch-direct.ts  test-fixed-client.ts  test-gradio-connection.ts  test-integration.sh  test-npz-full.ts  test-npz-parser.ts  (+7 more)
explorations/01/public/: app.js  app.ts  index.html  style.css
scripts/legacy/: lightglue_pipeline.py  lightglue_pipeline_full.py
scripts/postprocessing/: build_clusters_from_matches.py  organize_clusters.py  visualize_results.py
scripts/visualization/: visualize_overlap_matrix.py  visualize_overlaps.py
tools/: vis_clusters.py
(+34 files in other folders)
