[project]
name = "unsplash-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "kornia>=0.8.1",
    "kornia-rs>=0.1.9",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "scikit-learn>=1.7.2",
    "torchvision>=0.23.0",
]
